--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,6 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
 jobs:
   build:
 
@@ -21,5 +20,11 @@ jobs:
         cache: maven
     - name: Execute Test
       run: mvn clean test -Dsuite=testng
-
+    - name: Upload a build artifact
+      uses: actions/upload-artifact@v4.4.3
+      with:
+       name: Logs
+       path: logs/
+    
+     
   
